# pytorch2c

./: .gitignore  LICENSE  README.md
include/: torch2c.h  torch2c_generic.h
scripts/: CMakeLists.txt  build_deps.sh  compile.sh  get_deps.sh  run_test.sh
test/: base.py  feedforward.py  mnist.py
torch2c/: __init__.py  emitters.py  wrappers.py
